test/types/type_variables/deitz/part1/test_clone_class1_old.chpl
class foo {
  var x;
  def print() {
    writeln(x);
  }
}

var f : foo(2) = new foo(2);

f.print();
